# encapure

./: .gitignore  Cargo.toml  Claude.md  README.md  encapure-benchmarking.md  test_server.ps1
bench/: 1m_token_test.js  heavy_load_test.js  load_test.ps1  load_test_1000_tools.js  rerank.lua  scenario_test.js  scenario_test.ps1
python/: export_model.py  requirements.txt
scripts/: download_models.ps1  download_models.sh  investor_accuracy_demo.ps1  investor_demo.ps1  investor_demo_preview.sh  quick_accuracy_test.sh  run_accuracy_tests.ps1  run_accuracy_tests.sh
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src/handlers/: health.rs  mod.rs  rerank.rs  search.rs
src/inference/: bi_encoder.rs  mod.rs  model.rs  tokenize.rs
src/ingestion/: atomizer.rs  mod.rs  types.rs
src/persistence/: mod.rs
tests/: integration_test.rs  test_semantic_routing.rs
tests/data/: accuracy_test_cases.json  comprehensive_mock_tools.json
