[package]
name = "encapure"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "High-performance reranking microservice using BAAI/bge-reranker-v2-m3"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full", "signal"] }
tower = { version = "0.5", features = ["timeout", "util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Inference
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
ndarray = "0.16"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }

# Concurrency
crossbeam = "0.8"

# Utilities
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10.9"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3

[dev-dependencies]
tempfile = "3.24.0"
